Fix: Dark mode functionality on landing page:
Resolved issues with the dark mode button on the landing page, ensuring it functions correctly.

--- a/css/main.css
+++ b/css/main.css
@@ -102,8 +102,9 @@ main {
     letter-spacing: -1px;
 }
 
-.header-dark_light-mode i {
-    font-size: 1.25rem;
+.header__dark_light i {
+    font-size: 1.2rem;
+    cursor: pointer;
 }
 
 .header__menu_btn {
